objects/Response_Three_Month__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <formula>Participant__r.Contact__r.Full_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job</label>
        <referenceTo>Job__c</referenceTo>
        <relationshipLabel>Responses Three Month</relationshipLabel>
        <relationshipName>Responses_Three_Month</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Participant__c</fullName>
        <label>Participant</label>
        <referenceTo>Participant__c</referenceTo>
        <relationshipLabel>Three Month Responses</relationshipLabel>
        <relationshipName>Responses_Three_Month</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Q_Competence__c</fullName>
        <description>How would you rate your current level of:</description>
        <inlineHelpText>How would you rate your current level of:</inlineHelpText>
        <label>Q Competence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q_Confidence__c</fullName>
        <description>How would you rate your current level of:</description>
        <inlineHelpText>How would you rate your current level of:</inlineHelpText>
        <label>Q Confidence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Q_Final_Comments__c</fullName>
        <description>What final comments or suggestion would you like to provide?</description>
        <inlineHelpText>What final comments or suggestion would you like to provide?</inlineHelpText>
        <label>Q Final Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Q_Improved__c</fullName>
        <description>As a result of the workshop, has your influencing and negotiating performance improved?</description>
        <inlineHelpText>As a result of the workshop, has your influencing and negotiating performance improved?</inlineHelpText>
        <label>Q Improved</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q_Improvement_I_N_Occuring__c</fullName>
        <description>What areas of improvement have you noticed? Wider view of when influencing/negotiating is occurring</description>
        <inlineHelpText>What areas of improvement have you noticed? Wider view of when influencing/negotiating is occurring</inlineHelpText>
        <label>Q Improvement I+N Occuring</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Improvement Noticed</fullName>
                </value>
                <value>
                    <fullName>Not Noticed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q_Improvement_Managing_Style__c</fullName>
        <description>What areas of improvement have you noticed? Improved management of negotiation style (red vs. blue)</description>
        <inlineHelpText>What areas of improvement have you noticed? Improved management of negotiation style (red vs. blue)</inlineHelpText>
        <label>Q Improvement Managing Style</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Improvement Noticed</fullName>
                </value>
                <value>
                    <fullName>Not Noticed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q_Improvement_Negotiation_Confidence__c</fullName>
        <description>What areas of improvement have you noticed? Improved negotiation confidence</description>
        <inlineHelpText>What areas of improvement have you noticed? Improved negotiation confidence</inlineHelpText>
        <label>Q Improvement Negotiation Confidence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Improvement Noticed</fullName>
                </value>
                <value>
                    <fullName>Not Noticed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q_Improvement_OP_Hidden_Agendas__c</fullName>
        <description>What areas of improvement have you noticed? Better understanding the other party&apos;s hidden agendas</description>
        <inlineHelpText>What areas of improvement have you noticed? Better understanding the other party&apos;s hidden agendas</inlineHelpText>
        <label>Q Improvement OP Hidden Agendas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Improvement Noticed</fullName>
                </value>
                <value>
                    <fullName>Not Noticed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q_Improvement_Overall_ENSI_Framework__c</fullName>
        <description>What areas of improvement have you noticed? Overall appreciation of the ENS process framework</description>
        <inlineHelpText>What areas of improvement have you noticed? Overall appreciation of the ENS process framework</inlineHelpText>
        <label>Q Improvement Overall ENSI Framework</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Improvement Noticed</fullName>
                </value>
                <value>
                    <fullName>Not Noticed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q_Improvement_Pre_negotiation_Usage__c</fullName>
        <description>What areas of improvement have you noticed? Greater usage of the pre-negotiation (XY time)</description>
        <inlineHelpText>What areas of improvement have you noticed? Greater usage of the pre-negotiation (XY time)</inlineHelpText>
        <label>Q Improvement Pre-negotiation Usage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Improvement Noticed</fullName>
                </value>
                <value>
                    <fullName>Not Noticed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q_Improvement_Process_Aware__c</fullName>
        <description>What areas of improvement have you noticed? More aware of negotiation process</description>
        <inlineHelpText>What areas of improvement have you noticed? More aware of negotiation process</inlineHelpText>
        <label>Q Improvement Process Aware</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Improvement Noticed</fullName>
                </value>
                <value>
                    <fullName>Not Noticed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q_Improvement_Time_and_Timing__c</fullName>
        <description>What areas of improvement have you noticed? Better use of time and timing</description>
        <inlineHelpText>What areas of improvement have you noticed? Better use of time and timing</inlineHelpText>
        <label>Q Improvement Time and Timing</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Improvement Noticed</fullName>
                </value>
                <value>
                    <fullName>Not Noticed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q_Improvement__c</fullName>
        <description>What areas of improvement have you noticed? Closer attention to systematic preparation</description>
        <inlineHelpText>What areas of improvement have you noticed? Closer attention to systematic preparation</inlineHelpText>
        <label>Q Improvement Systematic Preparation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Improvement Noticed</fullName>
                </value>
                <value>
                    <fullName>Not Noticed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q_Overall_Impact__c</fullName>
        <description>How would you rate the overall impact of this course?</description>
        <inlineHelpText>How would you rate the overall impact of this course?</inlineHelpText>
        <label>Q Overall Impact</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Have achieved great results beyond my expectations</fullName>
                </value>
                <value>
                    <fullName>Has had a serious impact that others can see</fullName>
                </value>
                <value>
                    <fullName>Generally working on it with effective results</fullName>
                </value>
                <value>
                    <fullName>Had opportunities but have not put into practice</fullName>
                </value>
                <value>
                    <fullName>No negotiation opportunities since completing the course</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q_Recommend__c</fullName>
        <description>Would you recommend ENSI to colleagues, friends and associates?</description>
        <inlineHelpText>Would you recommend ENSI to colleagues, friends and associates?</inlineHelpText>
        <label>Q Recommend</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Have already recommended</fullName>
                </value>
                <value>
                    <fullName>Yes, in the future</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q_Result__c</fullName>
        <description>As a result of the program, what is your broad estimate of the total financial benefit achieved over the last three months?</description>
        <inlineHelpText>As a result of the program, what is your broad estimate of the total financial benefit achieved over the last three months?</inlineHelpText>
        <label>Q Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Under $5,000</fullName>
                </value>
                <value>
                    <fullName>$5,001 - $10,000</fullName>
                </value>
                <value>
                    <fullName>$10,001 - $50,000</fullName>
                </value>
                <value>
                    <fullName>$50,001 - $100,000</fullName>
                </value>
                <value>
                    <fullName>$100K - $250K</fullName>
                </value>
                <value>
                    <fullName>More than $250K</fullName>
                </value>
                <value>
                    <fullName>Cannot estimate financial benefit</fullName>
                </value>
                <value>
                    <fullName>$5,001 – $25,000</fullName>
                </value>
                <value>
                    <fullName>$25,001 – $100,000</fullName>
                </value>
                <value>
                    <fullName>$100,001 – $250,000</fullName>
                </value>
                <value>
                    <fullName>$250,001 – $500,000</fullName>
                </value>
                <value>
                    <fullName>Over $500,000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q_Three_key_concepts_1__c</fullName>
        <description>Which three key concepts of the workshop do you remember the most?</description>
        <inlineHelpText>Which three key concepts of the workshop do you remember the most?</inlineHelpText>
        <label>Q Three key concepts 2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Separating process from content</fullName>
                </value>
                <value>
                    <fullName>ENS &apos;secret&apos; strategy (draw it out, don&apos;t push it in)</fullName>
                </value>
                <value>
                    <fullName>Look for the common ground</fullName>
                </value>
                <value>
                    <fullName>Diagnosing the needs of the other side</fullName>
                </value>
                <value>
                    <fullName>Intentional style flexibility (red vs. blue)</fullName>
                </value>
                <value>
                    <fullName>Controlling the negotiation climate</fullName>
                </value>
                <value>
                    <fullName>How to recognise and use tactics</fullName>
                </value>
                <value>
                    <fullName>Managing the negotiation phases (sequence)</fullName>
                </value>
                <value>
                    <fullName>Systematic preparation of the negotiation process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q_Three_key_concepts_3__c</fullName>
        <description>Which three key concepts of the workshop do you remember the most?</description>
        <inlineHelpText>Which three key concepts of the workshop do you remember the most?</inlineHelpText>
        <label>Q Three key concepts 3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Separating process from content</fullName>
                </value>
                <value>
                    <fullName>ENS &apos;secret&apos; strategy (draw it out, don&apos;t push it in)</fullName>
                </value>
                <value>
                    <fullName>Look for the common ground</fullName>
                </value>
                <value>
                    <fullName>Diagnosing the needs of the other side</fullName>
                </value>
                <value>
                    <fullName>Intentional style flexibility (red vs. blue)</fullName>
                </value>
                <value>
                    <fullName>Controlling the negotiation climate</fullName>
                </value>
                <value>
                    <fullName>How to recognise and use tactics</fullName>
                </value>
                <value>
                    <fullName>Managing the negotiation phases (sequence)</fullName>
                </value>
                <value>
                    <fullName>Systematic preparation of the negotiation process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Q__c</fullName>
        <description>In the past 3 months I haven’t concluded a negotiation/event that allows me to determine financial benefits. However, I would say my general capability has improved by:</description>
        <inlineHelpText>In the past 3 months I haven’t concluded a negotiation/event that allows me to determine financial benefits. However, I would say my general capability has improved by:</inlineHelpText>
        <label>Q Improved by %</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No change</fullName>
                </value>
                <value>
                    <fullName>Under 25%</fullName>
                </value>
                <value>
                    <fullName>26% – 50%</fullName>
                </value>
                <value>
                    <fullName>51% – 75%</fullName>
                </value>
                <value>
                    <fullName>Over 75%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Survey_response_status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Touch__c</fullName>
        <inlineHelpText>Admin</inlineHelpText>
        <label>Touch</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Which_three_key_concepts_of_the_workshop__c</fullName>
        <description>Which three key concepts of the workshop do you remember the most?</description>
        <inlineHelpText>Which three key concepts of the workshop do you remember the most?</inlineHelpText>
        <label>Q Three key concepts 1</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Separating process from content</fullName>
                </value>
                <value>
                    <fullName>ENS &apos;secret&apos; strategy (draw it out, don&apos;t push it in)</fullName>
                </value>
                <value>
                    <fullName>Look for the common ground</fullName>
                </value>
                <value>
                    <fullName>Diagnosing the needs of the other side</fullName>
                </value>
                <value>
                    <fullName>Intentional style flexibility (red vs. blue)</fullName>
                </value>
                <value>
                    <fullName>Controlling the negotiation climate</fullName>
                </value>
                <value>
                    <fullName>How to recognise and use tactics</fullName>
                </value>
                <value>
                    <fullName>Managing the negotiation phases (sequence)</fullName>
                </value>
                <value>
                    <fullName>Systematic preparation of the negotiation process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Response Three Month</label>
    <nameField>
        <displayFormat>R-TM-{000000000}</displayFormat>
        <label>Response Three Month Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Responses Three Month</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>